--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a href="youtube.com/cursoemvideo">CursoemVideo</a>.</p>
+        <p>Modelo de site criado por <a href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a href="youtube.com/cursoemvideo">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
